@@ -124,6 +124,11 @@ available directly).
 
 26. Make pcre2test -C show if libreadline or libedit is supported.
 
+28. If the length of one branch of a group exceeded 65535 (the maximum value
+that is remembered as a minimum length), the whole group's length was 
+incorrectly recorded as 65535, leading to incorrect "no match" when start-up 
+optimizations were in force.
+
 
 Version 10.33 16-April-2019
 ---------------------------
